--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+        <li><a href="./recipes/vegan-lentil-curry.html">Vegan Red Lentil Curry</a></li>
+        <li><a href="./recipes/baked-tofu.html">Baked Tofu</a></li>
+        <li><a href="./recipes/kimchi-lentil-stew.html">Kimchi Lentil Stew</a>
+        </ul>
     </body>
 </html>
