Cleaned up code in two recipe pages

--- a/recipes/baked-tofu.html
+++ b/recipes/baked-tofu.html
@@ -8,7 +8,7 @@
         <h1>Baked Tofu</h1>
         <img src="../images/baked-tofu.jpg" alt="picture of baked tofu">
         <h2>Description:</h2>
-            <p>This is a really delicious tofu recipe based on one that you can find at <a href="https://www.noracooks.com/marinated-tofu/">Nora Cooks</a></p>
+            <p>This is a really delicious tofu recipe based on one that you can find at <a href="https://www.noracooks.com/marinated-tofu/">Nora Cooks</a>.</p>
             <p>You can also put it in the air fryer, but I like the results I get from the oven a little bit better.</p>
         <h2>Ingredients:</h2>
             <ul>
