--- a/recipes/vegan-lentil-curry.html
+++ b/recipes/vegan-lentil-curry.html
@@ -8,30 +8,32 @@
         <h1>Vegan Red Lentil Curry</h1>
         <img src="../images/curry.jpg" alt="A picture of red lentil curry"></a>
         <h2>Description:</h2>
-        <p>This is a delicious vegan curry that I found online. I make it at least once a week! A favorite, and only takes about an hour.</p>
-        <p>Some of the spices required might not be things you have lying around, but they are worth picking up. Rani is a great brand that sells the spices in bulk. They'll last you a long time!</p>
+        <p>This is a delicious vegan curry that I found at <a href="https://rainbowplantlife.com/vegan-red-lentil-curry/#wprm-recipe-container-5540">Rainbow Plant 
+            Life</a>. I make it at least once a week! A favorite, and only takes about an hour.</p>
+        <p>Some of the spices required might not be things you have lying around, but they are worth picking up. 
+            Rani is a great brand that sells the spices in bulk. They'll last you a long time!</p>
         <h2>Ingredients:</h2>
-        <ul>
-            <li>1 tablespoon refined or virgin coconut oil, or a neutral-flavored oil</li>
-            <li>4 cloves garlic, minced</li>
-            <li>2 inch piece of fresh ginger, peeled and minced or grated</li>
-            <li>1 tablespoon minced fresh turmeric, or 1 teaspoon ground turmeric</li>
-            <li>1-2 serrano peppers, diced (see recipe note below on spice level) </li>
-            <li>1 teaspoon ground cumin</li>
-            <li>1/2 teaspoon ground coriander</li>
-            <li>1/2 teaspoon Indian red chili powder (if you only have regular chili powder, which is a blend, use 1 teaspoon)</li>
-            <li>2 teaspoons curry powder</li>
-            <li>1 teaspoon garam masala</li>
-            <li>Kosher salt or sea salt to taste (I use about 1 tsp kosher salt, and add more at the end)</li>
-            <li>Freshly cracked black pepper to taste</li>
-            <li>1 cup (180-190g) red lentils, or split red lentils (the split variety will cook a bit quicker)</li>
-            <li>2 cups (480 mL) low-sodium vegetable broth</li>
-            <li>1 (14-ounce / 400g) can crushed tomatoes (or half of a 28-ounce can)</li>
-            <li>1 (13.5-ounce/400 mL) can full-fat coconut milk </li>
-            <li>3 tablespoons unsweetened creamy almond butter</li>
-            <li>1/2 a small lemon, juiced</li>
-            <li>1/2 cup (~8g) fresh cilantro, roughly chopped</li>
-            <li>For serving: Basmati or Jasmine rice and Indian flatbread such as roti, paratha, or naan</li>
+            <ul>
+                <li>1 tablespoon refined or virgin coconut oil, or a neutral-flavored oil</li>
+                <li>4 cloves garlic, minced</li>
+                <li>2 inch piece of fresh ginger, peeled and minced or grated</li>
+                <li>1 tablespoon minced fresh turmeric, or 1 teaspoon ground turmeric</li>
+                <li>1-2 serrano peppers, diced (see recipe note below on spice level) </li>
+                <li>1 teaspoon ground cumin</li>
+                <li>1/2 teaspoon ground coriander</li>
+                <li>1/2 teaspoon Indian red chili powder (if you only have regular chili powder, which is a blend, use 1 teaspoon)</li>
+                <li>2 teaspoons curry powder</li>
+                <li>1 teaspoon garam masala</li>
+                <li>Kosher salt or sea salt to taste (I use about 1 tsp kosher salt, and add more at the end)</li>
+                <li>Freshly cracked black pepper to taste</li>
+                <li>1 cup (180-190g) red lentils, or split red lentils (the split variety will cook a bit quicker)</li>
+                <li>2 cups (480 mL) low-sodium vegetable broth</li>
+                <li>1 (14-ounce / 400g) can crushed tomatoes (or half of a 28-ounce can)</li>
+                <li>1 (13.5-ounce/400 mL) can full-fat coconut milk </li>
+                <li>3 tablespoons unsweetened creamy almond butter</li>
+                <li>1/2 a small lemon, juiced</li>
+                <li>1/2 cup (~8g) fresh cilantro, roughly chopped</li>
+                <li>For serving: Basmati or Jasmine rice and Indian flatbread such as roti, paratha, or naan</li>
             </ul>
         <h2>Steps:</h2>
             <ol>
